--- a/src/components/Movies/Movie/Movie.module.scss
+++ b/src/components/Movies/Movie/Movie.module.scss
@@ -1,24 +1,3 @@
-.movies-list-section {
-  margin-top: 3rem;
-}
-
-.movies-list-heading {
-  text-align: center;
-  margin-bottom: 2rem;
-
-  h2 {
-    font-weight: 700;
-  }
-}
-
-.movies-list-container {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 .movie-card {
   height: 15rem;
   border: 1px solid white;
@@ -68,6 +47,7 @@
   a {
     color: white;
     text-decoration: none;
+    cursor: pointer;
 
     &:hover {
       text-decoration: underline;
@@ -122,14 +102,93 @@
   }
 }
 
+@media screen and (min-width: 1500px) {
+  .movie-card {
+    height: 20rem;
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .movie-card {
+    height: 25rem;
+  }
+}
+
+@media screen and (min-width: 2500px) {
+  .movie-card {
+    height: 30rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .movie-image-container {
+    width: 25%;
+  }
+  .movie-details {
+    width: 75%;
+  }
+}
+
 @media screen and (max-width: 800px) {
-  .movies-list-container {
-    width: 90%;
+  .movie-image-container {
+    width: 30%;
+  }
+  .movie-details {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .edit-movie-text {
+    font-size: 0.8rem;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .movies-list-container {
-    width: 95%;
+  .movie-image-container {
+    width: 35%;
+  }
+  .movie-details {
+    width: 65%;
+  }
+  .movie-description {
+    height: 42%;
+    -webkit-line-clamp: 5;
+    margin-bottom: 1rem;
+
+    p {
+      font-size: 0.75rem;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movie-title {
+    h3 {
+      width: 70%;
+    }
+  }
+
+  .edit-movie-text {
+    width: 20%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movie-image-container {
+    width: 45%;
+  }
+  .movie-details {
+    width: 55%;
+  }
+
+  .edit-movie-text {
+    font-size: 0.6rem;
+  }
+
+  .movie-title {
+    h3 {
+      font-size: 1rem;
+    }
   }
 }
