--- a/src/components/AddMovie/MovieImage/MovieImage.module.scss
+++ b/src/components/AddMovie/MovieImage/MovieImage.module.scss
@@ -1,9 +1,7 @@
 .movie-image-section {
   width: 50%;
   padding-top: 2rem;
-}
-
-.movie-image-section {
+  padding-bottom: 2rem;
   padding-left: 1rem;
 }
 
