--- a/src/components/EditMovie/MovieDetails/MovieDetails.module.scss
+++ b/src/components/EditMovie/MovieDetails/MovieDetails.module.scss
@@ -75,7 +75,7 @@
 @media screen and (max-width: 700px) {
   .movie-details-section {
     width: 100%;
-    border-right: none;
+    border-right: none !important;
     padding-right: 0;
   }
 
