--- a/src/components/EditMovie/MovieImage/MovieImage.module.scss
+++ b/src/components/EditMovie/MovieImage/MovieImage.module.scss
@@ -1,10 +1,8 @@
 .movie-image-section {
   width: 50%;
   padding-top: 2rem;
-}
-
-.movie-image-section {
   padding-left: 1rem;
+  padding-bottom: 2rem;
 }
 
 .cover-image-container {
